--- a/5-1-2025/task1/main.css
+++ b/5-1-2025/task1/main.css
@@ -1,3 +1,13 @@
+* {
+padding: 0;
+margin: 0;;
+}
+
+#logo_br{
+    display: flex;
+    justify-content: space-between;
+}
+
 .nav_bar {
 
     background-color: rgb(245, 62, 62);
@@ -10,8 +20,9 @@
 
 #br_icon {
     position: relative;
-    width: 5vw;
-    height: 5vw;
+    width: 10vw;
+    height: 10vw;
+    display: none;
 }
 
 #logo {
@@ -55,7 +66,7 @@ li a {
 @media screen and (max-width: 426px) {
 
     #br_icon {
-        /* display: none; */
+        display: inline;
 
     }
 
@@ -63,7 +74,7 @@ li a {
 
     #all_sections {
 
-        display: flex;
+        display: none;
         position: static;
         flex-direction: column;
         justify-content: flex-end;
